namespaces/kube-system/dashboard/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  labels:
    app: kubernetes-dashboard
  name: kubernetes-dashboard
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - hosts:
    - k8s.56k.jp
  rules:
  - host: k8s.56k.jp
    http:
      paths:
      - backend:
          serviceName: kubernetes-dashboard
          servicePort: 443
